--- a/src/assets/_overrides.scss
+++ b/src/assets/_overrides.scss
@@ -4,3 +4,9 @@
   border-color: darken($color: $primary, $amount: 10);
   border-width: medium;
 }
+.bg-transparent {
+  background-color: rgba(0, 0, 0, 0);
+}
+.bg-semi-transparent {
+  background-color: rgba(0, 0, 0, 0.472);
+}
