--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,4 +1,4 @@
-$body-bg: #e4e3e3;
+$body-bg: #000000;
 
 $primary: #204051;
 $secondary: #84a9ac;
@@ -18,6 +18,7 @@ $green: green;
 $teal: teal;
 $cyan: cyan;
 $white: white;
+$light: rgb(216, 216, 216);
 $gray: gray;
 $gray-dark: darkslategray;
 
