--- a/src/assets/_overrides.scss
+++ b/src/assets/_overrides.scss
@@ -16,3 +16,13 @@ a {
   -moz-transition: all 0.2s;
   transition: all 0.2s;
 }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Heebo", sans-serif;
+}
+p {
+  font-family: "Neuton", serif;
+}
